add_executable(opengeolab_command_smoke_test test_command_recorder.cpp)

target_compile_features(opengeolab_command_smoke_test PRIVATE cxx_std_20)

target_link_libraries(opengeolab_command_smoke_test PRIVATE Catch2::Catch2WithMain ogl_command)

add_test(NAME opengeolab_command_smoke_test COMMAND opengeolab_command_smoke_test)
