add_executable(opengeolab_scene_smoke_test test_scene.cpp)

target_compile_features(opengeolab_scene_smoke_test PRIVATE cxx_std_20)

target_link_libraries(opengeolab_scene_smoke_test PRIVATE Catch2::Catch2WithMain ogl_scene)

add_test(NAME opengeolab_scene_smoke_test COMMAND opengeolab_scene_smoke_test)
